--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -7,22 +7,21 @@ on:
 jobs: 
   build-and-deploy-dev: 
     runs-on: ubuntu-latest 
-    strategy: 
-      matrix: 
-        project: [Library-Application] 
- 
-    steps: 
+    
+    steps:
     - name: Checkout Code 
       uses: actions/checkout@v4 
  
     - name: Set up Java 
-      uses: actions/checkout@v4
+      uses: actions/setup-java@v3
       with: 
-        distribution: temurin 
-        java-version: 17 
+        distribution: 'temurin' 
+        java-version: '17' 
  
+    - name: List directory structure
+      run: ls -la
+        
     - name: Build with Maven (dev profile) 
-      working-directory: ${{ matrix.project }} 
       run: mvn clean install -Dspring.profiles.active=dev 
  
     - name: Deploy JAR to DEV server 
@@ -31,8 +30,8 @@ jobs:
         host: ${{ secrets.DEV_SERVER_IP }} 
         username: ${{ secrets.DEV_SERVER_USER }} 
         key: ${{ secrets.DEV_SERVER_KEY }} 
-        source: "${{ matrix.project }}/target/*.jar" 
-        target: "/home/${{ secrets.DEV_SERVER_USER }}/apps/${{ matrix.project }}" 
+        source: "target/*.jar" 
+        target: "/home/${{ secrets.DEV_SERVER_USER }}/apps/Library-Application" 
  
     - name: Restart App on DEV server 
       uses: appleboy/ssh-action@v1.0.3 
@@ -41,5 +40,5 @@ jobs:
         username: ${{ secrets.DEV_SERVER_USER }} 
         key: ${{ secrets.DEV_SERVER_KEY }} 
         script: | 
-          pkill -f "${{ matrix.project }}.*.jar" || true 
-          nohup java -jar -Dspring.profiles.active=dev /home/${{ secrets.DEV_SERVER_USER }}/apps/${{ matrix.project }}/*.jar > /home/${{ secrets.DEV_SERVER_USER }}/apps/${{ matrix.project }}/app.log 2>&1 &
+          pkill -f "Library-Application.*.jar" || true 
+          nohup java -jar -Dspring.profiles.active=dev /home/${{ secrets.DEV_SERVER_USER }}/apps/Library-Application/*.jar > /home/${{ secrets.DEV_SERVER_USER }}/apps/Library-Application/app.log 2>&1 &
