--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -1,44 +1,41 @@
-name: Build & Deploy to DEV 
- 
-on: 
-  push: 
-    branches: [ master ] 
- 
-jobs: 
-  build-and-deploy-dev: 
-    runs-on: ubuntu-latest 
-    
+name: Build & Deploy to DEV
+
+on:
+  push:
+    branches: [ master ]
+
+jobs:
+  build-and-deploy-dev:
+    runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout Code 
-      uses: actions/checkout@v4 
- 
-    - name: Set up Java 
-      uses: actions/setup-java@v3
-      with: 
-        distribution: 'temurin' 
-        java-version: '17' 
- 
-    - name: List directory structure
-      run: ls -la
-        
-    - name: Build with Maven (dev profile) 
-      run: mvn clean install -Dspring.profiles.active=dev 
- 
-    - name: Deploy JAR to DEV server 
-      uses: appleboy/scp-action@v0.1.4 
-      with: 
-        host: ${{ secrets.DEV_SERVER_IP }} 
-        username: ${{ secrets.DEV_SERVER_USER }} 
-        key: ${{ secrets.DEV_SERVER_KEY }} 
-        source: "target/*.jar" 
-        target: "/home/${{ secrets.DEV_SERVER_USER }}/Library-Application" 
- 
-    - name: Restart App on DEV server 
-      uses: appleboy/ssh-action@v1.0.3 
-      with: 
-        host: ${{ secrets.DEV_SERVER_IP }} 
-        username: ${{ secrets.DEV_SERVER_USER }} 
-        key: ${{ secrets.DEV_SERVER_KEY }} 
-        script: | 
-          pkill -f "Library-Application.*.jar" || true 
+    - name: Checkout Code
+      uses: actions/checkout@v4
+
+    - name: Set up Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: 17
+
+    - name: Build with Maven (dev profile)
+      run: mvn clean install -Dspring.profiles.active=dev
+
+    - name: Deploy JAR to DEV server
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.DEV_SERVER_IP }}
+        username: ${{ secrets.DEV_SERVER_USER }}
+        key: ${{ secrets.DEV_SERVER_KEY }}
+        source: "target/*.jar"
+        target: "/home/${{ secrets.DEV_SERVER_USER }}/Library-Application"
+
+    - name: Restart App on DEV server
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.DEV_SERVER_IP }}
+        username: ${{ secrets.DEV_SERVER_USER }}
+        key: ${{ secrets.DEV_SERVER_KEY }}
+        script: |
+          pkill -f "Library.*.jar" || true
           nohup java -jar -Dspring.profiles.active=dev /home/${{ secrets.DEV_SERVER_USER }}/Library-Application/*.jar > /home/${{ secrets.DEV_SERVER_USER }}/Library-Application/app.log 2>&1 &
