--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 9000
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host= 13.232.236.7
 spring.data.mongodb.port = 27017
 spring.data.mongodb.database = Books
