--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -24,26 +24,23 @@ jobs:
         echo "Looking for JAR files in target directory"
         find . -name "*.jar" | grep -v "original"
         
-    - name: Debug SSH Key
+    - name: Verify Secrets Are Available
       run: |
-        echo "Checking SSH key format (without revealing content)"
-        if [[ ! -z "${{ secrets.DEV_SERVER_KEY }}" ]]; then
-          echo "SSH key is not empty"
-          FIRST_LINE=$(echo "${{ secrets.DEV_SERVER_KEY }}" | head -1)
-          echo "First line of key: $FIRST_LINE"
-          LINE_COUNT=$(echo "${{ secrets.DEV_SERVER_KEY }}" | wc -l)
-          echo "Number of lines in key: $LINE_COUNT"
-        else
-          echo "SSH key is empty or not set!"
+        if [[ -z "${{ secrets.DEV_SERVER_IP }}" ]]; then
+          echo "::error::DEV_SERVER_IP secret is not set or is empty!"
+          exit 1
         fi
         
-    - name: Setup SSH Key File
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.DEV_SERVER_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
+        if [[ -z "${{ secrets.DEV_SERVER_USER }}" ]]; then
+          echo "::error::DEV_SERVER_USER secret is not set or is empty!"
+          exit 1
+        fi
         
-    - name: Test SSH Connection with Debug
+        echo "All required secrets appear to be set"
+        echo "Server IP length: ${#DEV_SERVER_IP}"
+        echo "Server user length: ${#DEV_SERVER_USER}"
+        
+    - name: Test SSH Connection (Hardcoded Host)
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.DEV_SERVER_IP }}
@@ -52,7 +49,7 @@ jobs:
         debug: true
         script: echo "SSH connection successful"
         
-    - name: Deploy JAR to DEV server with Debug
+    - name: Deploy JAR to DEV server
       uses: appleboy/scp-action@v0.1.4
       with:
         host: ${{ secrets.DEV_SERVER_IP }}
@@ -62,15 +59,7 @@ jobs:
         target: "/home/${{ secrets.DEV_SERVER_USER }}/Library-Application"
         debug: true
         
-    - name: Alternative SCP Deployment
-      if: failure()
-      run: |
-        # If the appleboy/scp-action fails, try a direct scp command
-        echo "Attempting direct SCP transfer"
-        scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa target/*.jar ${{ secrets.DEV_SERVER_USER }}@${{ secrets.DEV_SERVER_IP }}:/home/${{ secrets.DEV_SERVER_USER }}/Library-Application/
-        
     - name: Restart App on DEV server
-      if: success()
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.DEV_SERVER_IP }}
