--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -18,37 +18,6 @@ jobs:
     - name: Build with Maven (dev profile)
       run: mvn clean install -Dspring.profiles.active=dev
       
-    - name: Check if JAR was built
-      run: |
-        ls -la target/
-        echo "Looking for JAR files in target directory"
-        find . -name "*.jar" | grep -v "original"
-        
-    - name: Verify Secrets Are Available
-      run: |
-        if [[ -z "${{ secrets.DEV_SERVER_IP }}" ]]; then
-          echo "::error::DEV_SERVER_IP secret is not set or is empty!"
-          exit 1
-        fi
-        
-        if [[ -z "${{ secrets.DEV_SERVER_USER }}" ]]; then
-          echo "::error::DEV_SERVER_USER secret is not set or is empty!"
-          exit 1
-        fi
-        
-        echo "All required secrets appear to be set"
-        echo "Server IP length: ${#DEV_SERVER_IP}"
-        echo "Server user length: ${#DEV_SERVER_USER}"
-        
-    - name: Test SSH Connection (Hardcoded Host)
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.DEV_SERVER_IP }}
-        username: ${{ secrets.DEV_SERVER_USER }}
-        key: ${{ secrets.DEV_SERVER_KEY }}
-        debug: true
-        script: echo "SSH connection successful"
-        
     - name: Deploy JAR to DEV server
       uses: appleboy/scp-action@v0.1.4
       with:
@@ -57,9 +26,8 @@ jobs:
         key: ${{ secrets.DEV_SERVER_KEY }}
         source: "target/*.jar"
         target: "/home/${{ secrets.DEV_SERVER_USER }}/Library-Application"
-        debug: true
         
-    - name: Restart App on DEV server
+    - name: Stop existing application
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.DEV_SERVER_IP }}
@@ -67,4 +35,27 @@ jobs:
         key: ${{ secrets.DEV_SERVER_KEY }}
         script: |
           pkill -f "Library.*.jar" || true
-          nohup java -jar -Dspring.profiles.active=dev /home/${{ secrets.DEV_SERVER_USER }}/Library-Application/*.jar > /home/${{ secrets.DEV_SERVER_USER }}/Library-Application/app.log 2>&1 &
+          echo "Stopped any running application instances"
+          
+    - name: Start application
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ secrets.DEV_SERVER_IP }}
+        username: ${{ secrets.DEV_SERVER_USER }}
+        key: ${{ secrets.DEV_SERVER_KEY }}
+        script: |
+          cd /home/${{ secrets.DEV_SERVER_USER }}/Library-Application
+          # Find the latest JAR file
+          JAR_FILE=$(ls -t *.jar | head -1)
+          echo "Starting application with JAR file: $JAR_FILE"
+          # Use screen to run the application in the background
+          nohup java -jar -Dspring.profiles.active=dev "$JAR_FILE" > app.log 2>&1 &
+          # Add a sleep to ensure the process starts before the SSH connection closes
+          sleep 5
+          # Check if process is running
+          if pgrep -f "$JAR_FILE" > /dev/null; then
+            echo "Application started successfully"
+          else
+            echo "Failed to start application"
+            exit 1
+          fi
